<?xml version="1.0"?>
<package format="2">
  <name>waypoint_follower</name>
  <version>1.12.0</version>
  <description>The waypoint_follower package</description>
  <maintainer email="h_ohta@ertl.jp">h_ohta</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>amathutils_lib</depend>
  <depend>autoware_config_msgs</depend>
  <depend>autoware_health_checker</depend>
  <depend>autoware_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>rostest</depend>
  <depend>rosunit</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tablet_socket_msgs</depend>
  <depend>tf2</depend>
  <depend>tf</depend>
</package>
